--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,21 @@
-version: '3.8'
-
 services:
+  reservations:
+    build:
+      context: .
+      dockerfile: ./apps/reservations/Dockerfile
+      target: development
+    command: pnpm run start:dev reservations
+    ports:
+      - "3000:3000"
+    environment:
+      - MONGODB_URI = mongodb://admin:password123@localhost:27015/sleeper?authSource=admin
+    volumes:
+      - .:/usr/src/app
+    depends_on:
+      - mongodb
+
   mongodb:
-    image: mongo:latest
+    image: docker.arvancloud.ir/mongo
     container_name: mongodb
     restart: always
     environment:
@@ -13,19 +26,6 @@ services:
       - "27015:27017"
     volumes:
       - mongodb_data:/data/db
-
-  mongo-express:
-    image: docker.arvancloud.ir/mongo 
-    container_name: mongo-express
-    restart: always
-    environment:
-      - ME_CONFIG_MONGODB_ADMINUSERNAME=admin
-      - ME_CONFIG_MONGODB_ADMINPASSWORD=password123
-      - ME_CONFIG_MONGODB_SERVER=mongodb
-    ports:
-      - "8081:8081"
-    depends_on:
-      - mongodb
 
 volumes:
   mongodb_data:
